--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ allow me to progress...</p>
             </div>
             <!--//upper-row-->
             <div class="company">BITM under BASIS</div>
-            <div class="company"><a href="https://media-exp1.licdn.com/dms/image/C512DAQHKReL37r8Xtw/profile-treasury-image-shrink_1920_1920/0/1598454343171?e=1613570400&v=beta&t=v4Ag_yumDZWpoHktIlQlEiCmQ1u0SnBs-kXQY9gmzic" target="_blank">See credential #</a></div>
+            <div class="company"><a href="https://cutt.ly/9lXeRfr" target="_blank">See credential #</a></div>
           </div>
           <!--//meta-->
         </div>
