--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="sidebar-wrapper">
       <div class="profile-container">
         <img class="profile" src="assets/images/propic1.jpg" alt="" />
-        <h1 class="nameCustom">Full-Stack Developer</h1>
-        <h3 class="tagline"></h3>
+        <h1 class="nameCustom">Shaeed Al Hasan Siam</h1>
+        <h3 class="tagline">Full-Stack Developer</h3>
       </div>
       <!--//profile-container-->
 
