--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li class="phone"><i class="fa fa-phone"></i><a href="tel:0181235390">+8801787972797</a></li>
           <li class="github"><i class="fa fa-github"></i><a href="https://github.com/siamshaeed"
               target="_blank">siamshaeed</a></li>
-          <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://linkedin.com/in/piashcse/"
+          <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://linkedin.com/in/siamshaeed/"
               target="_blank">siamshaeed</a></li>
           <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/siamshaeed/"
               target="_blank">@siamshaeed</a></li>
