--- a/index.html
+++ b/index.html
@@ -287,6 +287,16 @@ allow me to progress...</p>
             <!--//level-bar-->
           </div>
           <!--//item-->
+
+          <div class="item">
+            <h3 class="level-title">WordPress</h3>
+            <div class="level-bar">
+              <div class="level-bar-inner" data-level="96%">
+              </div>
+            </div>
+            <!--//level-bar-->
+          </div>
+          <!--//item-->
         </div>
       </section>
 
