--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ allow me to progress...</p>
         <div class="item">
           <div class="meta">
             <div class="upper-row">
-              <h3 class="job-title">Professional Web App. Development (Full Stack ) </h3>
+              <h3 class="job-title">Professional Web App. Development (Full-Stack Development ) </h3>
               <div class="time">2020</div>
             </div>
             <!--//upper-row-->
