--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ allow me to progress...</p>
             </div>
             <!--//upper-row-->
             <div class="company">IsDB IT Scholership Project.</div>
-            <div class="company"><a href="https://scontent.fdac13-1.fna.fbcdn.net/v/t1.0-9/120836016_1584626081741135_9123079240392637646_o.jpg?_nc_cat=109&ccb=3&_nc_sid=8bfeb9&_nc_ohc=TcG_MJhVwNUAX_U2svK&_nc_ht=scontent.fdac13-1.fna&oh=f0a2c67c358bd8af80570b412f1a3329&oe=604FB468" target="_blank">See credential #</a></div>
+            <div class="company"><a href="https://github.com/SiamShaeed/SiamShaeed.github.io/blob/main/assets/images/idbAwardLatter.jpg?raw=true" target="_blank">See credential #</a></div>
           </div>
           <!--//meta-->
         </div>
@@ -376,11 +376,12 @@ allow me to progress...</p>
         <div class="item">
           <div class="meta">
             <div class="upper-row">
-              <h3 class="job-title">Natural Spoken English </h3>
-              <div class="time">2014</div>
+              <h3 class="job-title">Advance English Language</h3>
+              <div class="time">2020</div>
             </div>
             <!--//upper-row-->
-            <div class="company">Institute : S@ifur's</div>
+            <div class="company">Dhaka International University</div>
+            <div class="company"><a href="https://raw.githubusercontent.com/SiamShaeed/SiamShaeed.github.io/main/assets/images/advanceEnglishDiu.jpg" target="_blank">See credential #</a></div>
           </div>
           <!--//meta-->
         </div>
