link bitm certificate

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ allow me to progress...</p>
             </div>
             <!--//upper-row-->
             <div class="company">BITM under BASIS</div>
-            <div class="company"><a href="https://cutt.ly/9lXeRfr" target="_blank">See credential #</a></div>
+            <div class="company"><a href="https://raw.githubusercontent.com/SiamShaeed/SiamShaeed.github.io/main/assets/images/bitmCertificate.jpg" target="_blank">See credential #</a></div>
           </div>
           <!--//meta-->
         </div>
