--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="details">
                       <p>▪ Project estimation, requirement analysis, planning before developing, defining architecture, collaboration with team</br>
                       ▪ Implemented full order full of an e-commerce</br>
-                      <!-- playstore: <a href="#"> JAJA TV</a> -->
+                      <!-- playstore: <a href="#"> JAJA</a> -->
                     </p>
                   </div>
                   <!--//details-->
